--- a/src/app/component/question-list/question-list.component.html
+++ b/src/app/component/question-list/question-list.component.html
@@ -1,13 +1,2 @@
-<div *ngFor="let que of Questions">
-  <div class="card">
-    <div class="card-header">
-      {{que.text}}
-    </div>
-    <div class="card-block">
-      <p class="card-text">
-        {{que.ans}}
-      </p>
-    </div>
-  </div>
-  <br>
-</div>
+<app-add-question (QuestionAdded)="addQuestion($event)"></app-add-question><br><br>
+<app-question *ngFor="let que of Questions" [que]="que"></app-question>
